<resources>
    <string name="app_name">Proyecto</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="btn_registra">Registra</string>
    <string name="btn_actualiza">Actualiza</string>
    <string name="btn_elimina">Elimina</string>
    <string name="btn_lista">Lista</string>
    <string name="btn_guardar">Guardar</string>

    <string name="lbl_id">ID</string>
    <string name="lbl_pedido">Pedido</string>
    <string name="lbl_FechaRegistro">Fecha Registro</string>
    <string name="lbl_FechaEntrega">Fecha Entrega</string>
    <string name="lbl_LugarEntrega">Lugar Entrega</string>
    <string name="lbl_Ubigeo">ID Ubigeo</string>
    <string name="lbl_Cliente">ID Cliente</string>
    <string name="lbl_Usuario">ID Usuario</string>
    <string name="lbl_estado">Estado</string>
    <string-array name="array_estado">
        <item>[ESTADO]</item>
        <item>ENTREGADO</item>
        <item>PENDIENTE</item>
    </string-array>




    <string name="menu_home">Home</string>
    <string name="menu_ubigeo">Ubigeo</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_producto">Producto</string>
    <string name="menu_cliente">Cliente</string>
    <string name="menu_pedido">Pedido</string>
    <string name="menu_comprobante">Comprobante</string>
    <string name="menu_reclamo">Reclamo</string>
    <string name="home_second">Home Second</string>
</resources>
