<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.proyecto.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
            app:destination="@id/nav_home_second" />
    </fragment>
    <fragment
        android:id="@+id/nav_home_second"
        android:name="com.example.proyecto.ui.home.HomeSecondFragment"
        android:label="@string/home_second"
        tools:layout="@layout/fragment_home_second">
        <action
            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
            app:destination="@id/nav_home" />

        <argument
            android:name="myArg"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/nav_ubigeo"
        android:name="com.example.proyecto.ui.ubigeo.UbigeoFragment"
        android:label="@string/menu_ubigeo"
        tools:layout="@layout/fragment_ubigeo" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.proyecto.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_producto"
        android:name="com.example.proyecto.ui.producto.ProductoFragment"
        android:label="@string/menu_producto"
        tools:layout="@layout/fragment_producto" />


    <fragment
        android:id="@+id/nav_cliente"
        android:name="com.example.proyecto.ui.cliente.ClienteFragment"
        android:label="@string/menu_cliente"
        tools:layout="@layout/fragment_cliente" />

    <fragment
        android:id="@+id/nav_pedido"
        android:name="com.example.proyecto.ui.pedido.PedidoFragment"
        android:label="@string/menu_pedido"
        tools:layout="@layout/fragment_pedido" />

    <fragment
        android:id="@+id/nav_comprobante"
        android:name="com.example.proyecto.ui.comprobante.ComprobanteFragment"
        android:label="@string/menu_comprobante"
        tools:layout="@layout/fragment_comprobante" />

    <fragment
        android:id="@+id/nav_reclamo"
        android:name="com.example.proyecto.ui.reclamo.ReclamoFragment"
        android:label="@string/menu_reclamo"
        tools:layout="@layout/fragment_reclamo" />
</navigation>