<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pedido.PedidoFragment">

    <TextView
        android:id="@+id/text_pedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="2sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.011" />

    <LinearLayout
        android:layout_width="354dp"
        android:layout_height="680dp"
        android:orientation="vertical"
        android:paddingTop="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtTId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_id"
            android:textSize="20dp"
            android:layout_marginTop="2dp"
            />

        <EditText
            android:id="@+id/edtTId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />

        <TextView
            android:id="@+id/txtTfechaRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_FechaRegistro"
            android:textSize="20dp"
            android:layout_marginTop="2dp"
            />

        <EditText
            android:id="@+id/edtTfechaRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/txtTfechaEntrega"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_FechaEntrega"
            android:textSize="20dp"
            android:layout_marginTop="2dp"
            />
        <EditText
            android:id="@+id/edtTfechaEntrega"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/txtTlugarEntrega"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_LugarEntrega"
            android:textSize="20dp"
            android:layout_marginTop="2dp"
            />
        <EditText
            android:id="@+id/edtTlugarEntrega"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/txtProvEstado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/lbl_estado"
            />

        <Spinner
            android:id="@+id/spnProEstado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/array_estado"
            android:layout_marginTop="15dp"/>
        <!--        <TextView-->
        <!--            android:id="@+id/txtProTidUbigeo"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:text="@string/lbl_Ubigeo"-->
        <!--            android:textSize="20dp"-->
        <!--            android:layout_marginTop="2dp"-->
        <!--            />-->
        <!--        <EditText-->
        <!--            android:id="@+id/edtTidUbigeo"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            />-->
        <TextView
            android:id="@+id/txt1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Departamentos"
            android:layout_marginTop="4dp"/>

        <Spinner
            android:id="@+id/spnDepartamentos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="5sp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/txt2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Provincias"
            android:layout_marginTop="5dp"/>

        <Spinner
            android:id="@+id/spnProvincias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="5sp"
            android:layout_marginTop="5dp"/>

        <TextView
            android:id="@+id/txt3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Distritos"
            android:layout_marginTop="5dp"/>

        <Spinner
            android:id="@+id/spnDistritos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="5sp"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/txtTidCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_Cliente"
            android:textSize="20dp"
            android:layout_marginTop="2dp"
            />
        <EditText
            android:id="@+id/edtTidCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/txtPTidUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_Usuario"
            android:textSize="20dp"
            android:layout_marginTop="2dp"
            />
        <EditText
            android:id="@+id/edtTidUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />



        <Button
            android:id="@+id/btnProSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="#c6ce00"
            android:text="@string/btn_guardar"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/btnProDel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="#4d5645"
            android:text="@string/btn_elimina"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/txtProListId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            />

        <TextView
            android:id="@+id/txtProListFechaRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            />
        <TextView
            android:id="@+id/txtProListFechaEntrega"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            />






    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>